# EmailClassifierRLVR

./: .gitignore  README.md  pyproject.toml
configs/eval/: email-priority.toml
configs/rl/: email-priority-baseline.toml  email-priority.toml
data/: synthetic_emails.jsonl
email-data-raw/important_emails/: super-important_20260322_173839.json
email-data-raw/job_emails/: jobs_20260322_173934.json
email-data-raw/noise_emails/: less-important_20260322_174038.json
email-data-raw/receipts_emails/: reciepts_20260322_174133.json
environments/email_priority/: README.md  email_priority.py  pyproject.toml
environments/email_priority/.prime/: .env-metadata.json
environments/email_priority/data/: synthetic_emails.jsonl
scripts/: email_config.py  fetch_emails.py  generate_synthetic_emails.py
