[project]
name = "email-priority"
description = "Email category classification (7 categories) environment for RL training"
tags = ["single-turn", "classification", "email", "train", "eval"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["email_priority.py", "pyproject.toml", "data/synthetic_emails.jsonl"]

[tool.verifiers.eval]
num_examples = 20
rollouts_per_example = 1
